--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-dependencies</artifactId>
+			<version>2.7.3</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>com.h2database</groupId>
